[gd_scene load_steps=18 format=3 uid="uid://bafjic6ou1ydj"]

[ext_resource type="Script" path="res://Enemies/Diff1/EnemyBase.gd" id="1_bgfmh"]
[ext_resource type="Texture2D" uid="uid://b6t3851lhn5va" path="res://2D Pixel Dungeon Asset Pack v2.0/2D Pixel Dungeon Asset Pack/Vampire_hurt.png" id="2_jdwvl"]
[ext_resource type="PackedScene" uid="uid://fxlwjwi57eeh" path="res://Enemies/Diff1/arrow.tscn" id="3_lf2gd"]
[ext_resource type="Script" path="res://Enemies/Diff1/StateMachine.gd" id="4_afbyk"]
[ext_resource type="Script" path="res://Idle.gd" id="5_viiw1"]
[ext_resource type="Script" path="res://Enemies/Diff1/Aware.gd" id="6_kec1y"]
[ext_resource type="Script" path="res://Enemies/Diff1/Dead.gd" id="7_jrfsb"]
[ext_resource type="Script" path="res://Enemies/Diff1/Attack.gd" id="8_0ax1a"]
[ext_resource type="Texture2D" uid="uid://bpleeomu10r0c" path="res://2D Pixel Dungeon Asset Pack v2.0/2D Pixel Dungeon Asset Pack/enem_atk.png" id="9_78aox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2atbw"]
size = Vector2(26, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bx6hb"]
size = Vector2(26, 32)

[sub_resource type="Animation" id="Animation_5f6ny"]
resource_name = "Death_ani"
length = 0.9
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"set_physics_process"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimFrames:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6, 7, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7js6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimFrames:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimFrames:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m7jq4"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimFrames:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_5y1oa"]
resource_name = "ranged_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [ExtResource("3_lf2gd")],
"method": &"ranged_attack"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0l3g3"]
_data = {
"Death_ani": SubResource("Animation_5f6ny"),
"RESET": SubResource("Animation_7js6f"),
"attack": SubResource("Animation_m7jq4"),
"ranged_attack": SubResource("Animation_5y1oa")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xnwh8"]
size = Vector2(50, 50)

[node name="Enemy3" type="CharacterBody2D"]
script = ExtResource("1_bgfmh")
HP = 5
dmg = 30
spd = 4000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2atbw")

[node name="AnimFrames" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_jdwvl")
hframes = 5
vframes = 2

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_bx6hb")

[node name="Invuln_Timer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0l3g3")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("4_afbyk")
atkRange = 30
initialState = NodePath("")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_viiw1")

[node name="Aware" type="Node" parent="StateMachine"]
script = ExtResource("6_kec1y")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("7_jrfsb")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("8_0ax1a")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_78aox")
hframes = 4
vframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_xnwh8")

[connection signal="timeout" from="Invuln_Timer" to="." method="_on_invuln_timer_timeout" flags=18]
